--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "@tanstack/react-query": "^5.90.12",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "react": "19.2.1",
